# curgit

./: Cargo.toml  README.md  README.zh-CN.md  SKILLS.md  install.sh
src/: cli.rs  git.rs  llm.rs  main.rs  prompt.rs  session.rs  split.rs
